@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.22-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-22 09:58:48, took 00:13:23, with 50 workers, on 4218 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2026-01-22 10:55:59, took 00:13:30, with 50 workers, on 4224 cases, 0 failed, 0 traces, 6 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3676,6 +3676,12 @@ http://sources.freertr.org/cfg/rout-bgp915.tst;rout-bgp915.tst;success;bgp route
 http://sources.freertr.org/cfg/rout-bgp916.tst;rout-bgp916.tst;success;bgp routemap filtering with asany with soft-reconfig
 http://sources.freertr.org/cfg/rout-bgp917.tst;rout-bgp917.tst;success;bgp routepolicy filtering with asany
 http://sources.freertr.org/cfg/rout-bgp918.tst;rout-bgp918.tst;success;bgp routepolicy filtering with asany with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp919.tst;rout-bgp919.tst;success;unicast+mup over bgp
+http://sources.freertr.org/cfg/rout-bgp920.tst;rout-bgp920.tst;success;unicast+mup over bgp with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp921.tst;rout-bgp921.tst;success;unicast+mup over bgp with additional path
+http://sources.freertr.org/cfg/rout-bgp922.tst;rout-bgp922.tst;success;unicast+omup over bgp
+http://sources.freertr.org/cfg/rout-bgp923.tst;rout-bgp923.tst;success;unicast+omup over bgp with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp924.tst;rout-bgp924.tst;success;unicast+omup over bgp with additional path
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
