@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.22-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-22 09:58:48, took 00:13:23, with 50 workers, on 4218 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2026-01-22 10:55:59, took 00:13:30, with 50 workers, on 4224 cases, 0 failed, 0 traces, 6 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3688,6 +3688,12 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp916.tst">rout-bgp916.tst</a></td><td>success</td><td>bgp routemap filtering with asany with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp917.tst">rout-bgp917.tst</a></td><td>success</td><td>bgp routepolicy filtering with asany</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp918.tst">rout-bgp918.tst</a></td><td>success</td><td>bgp routepolicy filtering with asany with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp919.tst">rout-bgp919.tst</a></td><td>success</td><td>unicast+mup over bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp920.tst">rout-bgp920.tst</a></td><td>success</td><td>unicast+mup over bgp with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp921.tst">rout-bgp921.tst</a></td><td>success</td><td>unicast+mup over bgp with additional path</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp922.tst">rout-bgp922.tst</a></td><td>success</td><td>unicast+omup over bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp923.tst">rout-bgp923.tst</a></td><td>success</td><td>unicast+omup over bgp with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp924.tst">rout-bgp924.tst</a></td><td>success</td><td>unicast+omup over bgp with additional path</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
