@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.22-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-22 10:11:28, took 00:12:11, with 50 workers, on 865 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2026-01-22 11:09:36, took 00:13:08, with 50 workers, on 865 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
